[package]
name = "pgsmcrypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
pgrx = "=0.12.5"
bytes = "1.1.0"
num-traits = "0.2.14"
num-bigint = "0.4.3"
hex = "0.4.3"
num-integer = "0.1.44"
rand = "0.8.4"
pem = "1.0.2"
lazy_static = "1.4.0"
base64 = "0.13.0"
yasna = {version = "0.5.0", features = ["num-bigint"]}
regex = "1.10.3"

[dev-dependencies]
pgrx-tests = "=0.12.5"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
